# rnfc

./: .gitignore  ci.sh  rust-toolchain.toml  rustfmt.toml
examples/fm175xx/: Cargo.toml  memory.x  workspace.code-workspace
examples/fm175xx/.cargo/: config.toml
examples/fm175xx/src/: main.rs
examples/st25r39-disco/: .gitignore  Cargo.toml  workspace.code-workspace
examples/st25r39-disco/.cargo/: config.toml
examples/st25r39-disco/src/: device.rs  fmt.rs  main.rs
rnfc/: Cargo.toml
rnfc-acr122u/: Cargo.toml
rnfc-acr122u/src/: lib.rs
rnfc-fm175xx/: Cargo.toml  regs.yaml
rnfc-fm175xx/src/: iso14443a.rs  lib.rs  regs.rs
rnfc-fm175xx/src/interface/: i2c.rs  mod.rs  spi.rs
rnfc-st25r39/: Cargo.toml
rnfc-st25r39/src/: aat.rs  aat_esp_idf.rs  iso14443a.rs  lib.rs  regs.rs  regs.yaml
rnfc-st25r39/src/interface/: i2c.rs  mod.rs  spi.rs
rnfc-traits/: Cargo.toml
rnfc-traits/src/: fmt.rs  iso14443a.rs  iso14443a_ll.rs  iso_dep.rs  iso_dep_a.rs  lib.rs
rnfc/src/: fmt.rs  iso14443a.rs  iso_dep.rs  lib.rs
