[package]
authors = ["Dario Nieuwenhuis <dirbaio@dirbaio.net>"]
edition = "2021"
name = "rnfc-fm175xx"
version = "0.1.0"

[dependencies]
rnfc-traits = { path = "../rnfc-traits" }

# TODO: Remove
cortex-m = "0.7.3"

defmt = { version = "0.3", optional = true }
log = { version = "0.4.14", optional = true }

futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
embassy-time = { version = "0.1.0" }
embassy-futures = { version = "0.1.0" }
embedded-hal = { version = "1.0.0-alpha.8" }
embedded-hal-async = { version = "0.1.0-alpha.1" }