[package]
name = "rnfc-st25r39"
version = "0.1.0"
edition = "2021"

[features]
defmt = [ "dep:defmt", "rnfc-traits/defmt", "heapless/defmt-impl" ]

[dependencies]
defmt = { version = "0.3", optional = true }
log = { version = "0.4.14", optional = true }

embassy = { version = "0.1.0", features = ["time"]}
rnfc-traits = { version = "0.1.0", path = "../rnfc-traits" }
heapless = { version = "0.7.1", default-features = false } 
embedded-hal = "1.0.0-alpha.8"
embedded-hal-async = { version = "0.1.0-alpha.1" }
