[package]
name = "rnfc-st25r39"
version = "0.1.0"
edition = "2021"

[features]
defmt = [ "dep:defmt", "rnfc-traits/defmt", "heapless/defmt-impl" ]

[dependencies]
defmt = { version = "0.3", optional = true }
log = { version = "0.4.14", optional = true }

embassy-time = { version = "0.1.0" }
embassy-futures = { version = "0.1.0" }
rnfc-traits = { version = "0.1.0", path = "../rnfc-traits" }
heapless = { version = "0.7.1", default-features = false } 
embedded-hal = { version = "1.0.0-alpha.11" }
embedded-hal-async = { version = "0.2.0-alpha.2" }
