[package]
name = "rnfc"
version = "0.1.0"
edition = "2021"

[features]
defmt = ["dep:defmt", "rnfc-traits/defmt", "heapless/defmt-03"]

[dependencies]
rnfc-traits = { version = "0.1.0", path = "../rnfc-traits" }
defmt = { version = "0.3", optional = true }
log = { version = "0.4.14", optional = true }
heapless = "0.8"

[dev-dependencies]
hex-literal = "0.4.1"
tokio = { version = "1.24.2", default-features = false, features = ["macros", "rt"] }
env_logger = "0.10.0"
test-log = { version = "0.2.11", features = ["log"] }