[package]
authors = ["Dario Nieuwenhuis <dirbaio@dirbaio.net>"]
edition = "2021"
name = "rnfc-example-fm175xx"
version = "0.1.0"

[features]
default = ["defmt"]

[dependencies]
rnfc = { path = "../../rnfc", features=["defmt"]}
rnfc-traits = { path = "../../rnfc-traits", features=["defmt"]}
rnfc-fm175xx = { path = "../../rnfc-fm175xx", features=["defmt"]}
embassy-executor = { version = "0.1.0", features = ["defmt", "nightly", "integrated-timers"] }
embassy-time = { version = "0.1.0", features = ["defmt", "nightly", "unstable-traits"] }
embassy-futures = { version = "0.1.0" }
embassy-nrf = { version = "0.1.0", features = ["defmt", "nightly", "unstable-traits", "unstable-pac", "nrf52840", "time-driver-rtc1", "gpiote"] }

defmt = { version = "0.3", optional = true }
log = { version = "0.4.14", optional = true }
defmt-rtt = "0.3"

cortex-m = { version= "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
rand = { version = "0.8.4", default-features = false }
embedded-storage = "0.3.0"
embedded-hal = { version = "1.0.0-alpha.8" }
embedded-hal-async = { version = "0.1.0-alpha.1" }

[profile.dev]
debug = 2
debug-assertions = true
opt-level = 's'
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "7542505cf903930520773f5b6b5ff239b78a8f9c" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "7542505cf903930520773f5b6b5ff239b78a8f9c" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "7542505cf903930520773f5b6b5ff239b78a8f9c" }
embassy-macros = { git = "https://github.com/embassy-rs/embassy", rev = "7542505cf903930520773f5b6b5ff239b78a8f9c" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy", rev = "7542505cf903930520773f5b6b5ff239b78a8f9c" }
