[package]
authors = ["Dario Nieuwenhuis <dirbaio@dirbaio.net>"]
edition = "2021"
name = "rnfc-example-fm175xx"
version = "0.1.0"

[features]
default = ["defmt"]

[dependencies]
rnfc = { path = "../../rnfc", features=["defmt"]}
rnfc-traits = { path = "../../rnfc-traits", features=["defmt"]}
rnfc-fm175xx = { path = "../../rnfc-fm175xx", features=["defmt"]}
embassy-executor = { version = "0.7", features = ["defmt", "nightly", "arch-cortex-m", "executor-thread"] }
embassy-time = { version = "0.4", features = ["defmt"] }
embassy-futures = { version = "0.1.0" }
embassy-nrf = { version = "0.3.0", features = ["defmt", "unstable-pac", "nrf52840", "time-driver-rtc1", "gpiote", "nfc-pins-as-gpio"] }

defmt = { version = "0.3", optional = true }
log = { version = "0.4.14", optional = true }
defmt-rtt = "0.4.1"

cortex-m = { version= "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[profile.dev]
debug = 2
debug-assertions = true
opt-level = 's'
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
